changed style as fixed image is not possible on mobile

--- a/themes/MxA/source/css/style.styl
+++ b/themes/MxA/source/css/style.styl
@@ -20,13 +20,7 @@ body
   font-size: 18px
   background-color: darkblue
   color: white
-  background-image: url(/photographs/IMG_2116.JPEG)
-  background-size: cover
-  background-repeat: no-repeat
-  background-position: center
-  background-attachment: fixed
   margin: 0
-  height: 100vh
 
 h1, h2
   font-family: MuseoModerno
@@ -44,11 +38,17 @@ article
   max-width: 36em
   margin: 0 auto
   darkBackground()
-  background-color: hsla(0, 0%, 20%, 1)
+  //background-color: hsla(0, 0%, 20%, 1)
 
 #home // Applied to inedex.ejs
   max-width: 960px
   margin: 0 auto
+  background-color: black
+  background-image: url(/photographs/IMG_2116.JPEG)
+  background-size: cover
+  background-repeat: no-repeat
+  background-position: center
+  min-height: 100vh
 
   header, nav, main
     height: 33vh
